@@ -1,3 +1,7 @@
+[B]Version 1.0.5 - 2013-11-15[/B]
+- Updated for Frodo / Gotham
+- Removed Investor 1000
+
 [B]Version 1.0.4 - 2012-10-10[/B]
 - Updated feeds, icon and fanart (Thanks to Thomas Riise)
 
